--- a/search.html
+++ b/search.html
@@ -44,17 +44,22 @@
       const townName = document.getElementById('townInput').value.trim();
       if (!townName) return;
 
-      const iframe = parent.document.getElementById('mapboxFrame');
-      if (iframe && iframe.contentWindow) {
-        iframe.contentWindow.postMessage({
+      // Try to find the iframe with the map by its URL
+      const mapFrame = Array.from(parent.document.getElementsByTagName("iframe")).find(
+        iframe => iframe.src.includes("MBTAFindYourCommunity/map_with_button.html")
+      );
+
+      if (mapFrame && mapFrame.contentWindow) {
+        mapFrame.contentWindow.postMessage({
           type: 'search-town',
           name: townName
-        }, 'https://20ahoes.github.io');  // ✅ Your GitHub Pages domain
+        }, 'https://20ahoes.github.io');
         console.log("📤 Sent search-town:", townName);
       } else {
-        console.warn("❌ mapboxFrame iframe not found.");
+        console.warn("❌ Map iframe not found or not ready.");
       }
     }
   </script>
+
 </body>
 </html>
