--- a/map_with_button.html
+++ b/map_with_button.html
@@ -85,7 +85,7 @@
     const defaultZoom = 8.0;
     const layerId = 'municipalitiesbycommunitytype-c8ks3h copy';
     const sourceLayer = 'MunicipalitiesByCommunityType-c8ks3h';
-    const nameField = 'data0k5Yh1';
+    const nameField = 'Municipali';
 
     const bounds = [[-72.5, 41.5], [-69.5, 43.0]];
 
